k8s/overlays/production/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: please-support-me-eu-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "please-support-me-eu-ip"
    networking.gke.io/managed-certificates: "please-support-me-eu-cert"
spec:
  rules:
    - host: please-support-me.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 8000
    - host: keycloak.please-support-me.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
